# Computer-Graphics

Practice/: 2200018401-Mohammad Farid hendianto-Sabtu 07.00 - 10.00-PrakPost(1).docx  Petunjuk Praktikum Grafika Komputer 2024 OBE REV_protected.docx  ~$00018401-Mohammad Farid hendianto-Sabtu 07.00 - 10.00-PrakPost(1).docx  ~$tunjuk Praktikum Grafika Komputer 2024 OBE REV_protected.docx
Practice/Langkah Praktikum/PERTEMUAN 1/: Copy of kegiatan.txt
Practice/Langkah Praktikum/PERTEMUAN 3/: Copy of PRAK3.txt
Practice/Langkah Praktikum/PERTEMUAN 4/: Copy of GRAFKOM PRAK 4.txt
Practice/Langkah Praktikum/PERTEMUAN 5/: Copy of p5graf.cpp  Copy of perspektif.cpp
Practice/Langkah Praktikum/PERTEMUAN 6/: prak.txt
Practice/Langkah Praktikum/PERTEMUAN 7/: Copy of praktikum7.txt
Practice/Langkah Praktikum/PERTEMUAN 8/: Copy of Laprak_.txt
Practice/Langkah Praktikum/PERTEMUAN 9/: main.txt
Practice/Lecture 2/: Algoritma Bresenham.cpp  Algoritma DDA.cpp  CMakeLists.txt  Post Test- Algoritma DDA.cpp
Practice/Lecture_6/: Makefile.win  main.cpp  prak.dev  prak.layout  pretest.docx
Practice/Lecutre_5/: main.cpp  prak.dev  prak.layout
Practice/Responsi/: 2200018401-Mohammad Farid Hendianto - ResponsiGF.docx  Contoh Format Laporan Praktikum Grafika Komputer (1) (1).docx  ~$00018401-Mohammad Farid Hendianto - ResponsiGF.docx  ~WRL3219.tmp
Practice/Responsi/source-code/bab1/post/: main.cpp  prak.layout
Practice/kubus/: main.cpp
UK_1/: bresenham.py  tempCodeRunnerFile.py
UK_2/UK2/: main.py
UTS/: Rangkuman Grafkom.docx
(+41 files in other folders)
